Fixed spacing issue

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,7 +1,6 @@
 /*
  *= require_self
  *= require_tree .
- *= require twitter/bootstrap
  */
  body {
 	background-image:url('bg.png');
@@ -10,22 +9,31 @@
 	margin: 0;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+
 #header-wrap {
 	background-color: #424242;
 	height: 100px;
 	width: 100%;
-  top: 0;
 }
 
 #header {
-  margin: 0 auto;
+  padding-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
 	color: #FFFFFF;
 	width: 588px;
 }
 
 #wrapper {
 	padding: 0 6px;
-	margin: 0 auto;
+  margin-top: 10px;
+	margin-left: auto;
+  margin-right: auto;
 	width: 588px;
 }
 
